GreenLagoon: ctk: rename Gtk -> Ctk

--- a/desktop-themes/GreenLagoon/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/GreenLagoon/ctk-3.0/cafe-applications.css
@@ -290,7 +290,7 @@ PanelSeparator {
 }
 
 /* outlines */
-window.background, /* selector where outlines are writen on GtkTrayIcon */
+window.background, /* selector where outlines are writen on CtkTrayIcon */
 .cafe-panel-menu-bar menubar,
 .cafe-panel-menu-bar button,
 .cafe-panel-menu-bar PanelApplet {
@@ -601,7 +601,7 @@ EggToolbarEditor.vertical scrolledwindow {
     border-style: solid;
     border-width: 1px 1px 0px 1px;
     border-color: darker (@theme_bg_color);
-	-GtkToolbar-button-relief: normal;
+	-CtkToolbar-button-relief: normal;
 }
 
 .appearance-window > box.vertical.dialog-vbox > notebook.frame  box.vertical > box.vertical > box.horizontal > box.vertical toolbar {
@@ -609,7 +609,7 @@ EggToolbarEditor.vertical scrolledwindow {
     border-width: 1px;
 	border-color: darker (@theme_bg_color);
     background-color: transparent;
-    -GtkToolbar-button-relief: normal;
+    -CtkToolbar-button-relief: normal;
 	padding-top: 3px;
 	padding-bottom: 3px;
 }
