--- a/desktop-themes/Mint/ctk-3.0/other-applications.css
+++ b/desktop-themes/Mint/ctk-3.0/other-applications.css
@@ -3,11 +3,11 @@
  *********************/
 
 .nemo-window widget.raised.linked > button:nth-child(first) widget {
-    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic");
+    -ctk-icon-source: -ctk-icontheme("pan-start-symbolic");
 }
 
 .nemo-window widget.raised.linked > button:nth-child(last) widget {
-    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
+    -ctk-icon-source: -ctk-icontheme("pan-end-symbolic");
 }
 
 .nemo-window widget.raised.linked > button:nth-child(first) {
@@ -123,7 +123,7 @@
 }
 
 /* inactive pane */
-/* bug in gtk+, .view writes no bg color in all browsers */
+/* bug in ctk+, .view writes no bg color in all browsers */
 .nemo-inactive-pane .view,
 .nemo-inactive-pane scrolledwindow,
 .nemo-inactive-pane scrolledwindow treeview {
@@ -167,9 +167,9 @@
 
 /* cinnamon-settings */
 
-button.gtkstyle-fallback,
-button.gtkstyle-fallback:focus,
-button.gtkstyle-fallback:backdrop {
+button.ctkstyle-fallback,
+button.ctkstyle-fallback:focus,
+button.ctkstyle-fallback:backdrop {
 	border-image: url("borders/button.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
 	border-radius: 4px;
 	border-width: 2px;
@@ -177,11 +177,11 @@ button.gtkstyle-fallback:backdrop {
 	border-color: transparent;
 }
 
-button.gtkstyle-fallback:hover,
-button.gtkstyle-fallback:hover:active,
-button.gtkstyle-fallback:backdrop:hover,
-button.gtkstyle-fallback:focus:hover,
-button.gtkstyle-fallback:focus:hover:active {
+button.ctkstyle-fallback:hover,
+button.ctkstyle-fallback:hover:active,
+button.ctkstyle-fallback:backdrop:hover,
+button.ctkstyle-fallback:focus:hover,
+button.ctkstyle-fallback:focus:hover:active {
 	border-image: url("borders/button-active-focus.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
 	border-radius: 4px;
 	border-width: 2px;
@@ -239,10 +239,10 @@ paned overlay revealer.bottom .background.horizontal.osd button.flat.image-butto
  ***********/
 
 /* 2.0 */
-.lightdm-gtk-greeter #login_window.background,
+.lightdm-ctk-greeter #login_window.background,
 /* 1.8.5 */
-#login_window.background.lightdm-gtk-greeter,
-#login_window.background.lightdm-gtk-greeter box.vertical {
+#login_window.background.lightdm-ctk-greeter,
+#login_window.background.lightdm-ctk-greeter box.vertical {
 	border-radius: 10px;
     border-style: solid;
     border-width: 1px;
@@ -250,40 +250,40 @@ paned overlay revealer.bottom .background.horizontal.osd button.flat.image-butto
 }
 
 /* 2.0 */
-.lightdm-gtk-greeter #login_window.background #content_frame,
-.lightdm-gtk-greeter #login_window.background #buttonbox_frame,
+.lightdm-ctk-greeter #login_window.background #content_frame,
+.lightdm-ctk-greeter #login_window.background #buttonbox_frame,
 /* 1.8.5 */
-#login_window.background.lightdm-gtk-greeter #content_frame,
-#login_window.background.lightdm-gtk-greeter #buttonbox_frame {
+#login_window.background.lightdm-ctk-greeter #content_frame,
+#login_window.background.lightdm-ctk-greeter #buttonbox_frame {
     border-radius: 0px;
     border-style: none;
     border-width: 0px;
 }
 
 /* 2.0 */
-.lightdm-gtk-greeter #login_window.background #user_image_border,
+.lightdm-ctk-greeter #login_window.background #user_image_border,
 /* 1.8.5 */
-#login_window.background.lightdm-gtk-greeter #user_image_border {
+#login_window.background.lightdm-ctk-greeter #user_image_border {
     border-style: solid;
     border-width: 1px;
     border-color: shade(@theme_bg_color, 0.8);
 }
 
 /* 2.0 */
-.lightdm-gtk-greeter #login_window.background #prompt_entry,
-.lightdm-gtk-greeter #login_window.background button.combo,
-.lightdm-gtk-greeter #login_window.background button.text-button,
-.lightdm-gtk-greeter #login_window.background button.text-button.default,
+.lightdm-ctk-greeter #login_window.background #prompt_entry,
+.lightdm-ctk-greeter #login_window.background button.combo,
+.lightdm-ctk-greeter #login_window.background button.text-button,
+.lightdm-ctk-greeter #login_window.background button.text-button.default,
 /* 1.8.5 */
-#login_window.background.lightdm-gtk-greeter #prompt_entry,
-#login_window.background.lightdm-gtk-greeter button.combo,
-#login_window.background.lightdm-gtk-greeter button.text-button,
-#login_window.background.lightdm-gtk-greeter button.text-button.default {
+#login_window.background.lightdm-ctk-greeter #prompt_entry,
+#login_window.background.lightdm-ctk-greeter button.combo,
+#login_window.background.lightdm-ctk-greeter button.text-button,
+#login_window.background.lightdm-ctk-greeter button.text-button.default {
 	padding: 6px 4px;
 }
 
 /* 2.0 */
-.lightdm-gtk-greeter #panel_window.background menubar separator {
+.lightdm-ctk-greeter #panel_window.background menubar separator {
     background-color: @theme_bg_color;
     background-image: none;
     color: @theme_fg_color;
@@ -423,7 +423,7 @@ OsScrollbar:disabled {
 }
 
 #meldapp > box.vertical > notebook.frame box.vertical > grid.horizontal infobar {
-	-gtk-icon-style: regular;
+	-ctk-icon-style: regular;
 }
 
 #meldapp > box.vertical > notebook.frame box.vertical > label {
